nuevo index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!--Esta es una parte de la pagina web que debes edita, dentro de ella coloca tu nombre completo dentro del campo H2-->
                          <!--Escribe dentro del h2 tu nombre -->
-    <h2 style="text-align: center;"> <!--Remplaza esto por tu nombre -->   </h2>
+    <h2 style="text-align: center;"> <!--Remplaza esto por tu nombre -->   </Jose Luis>
 
     <p style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; text-align: center;">Si puedes ver todo este texto con tu nombre toma un pantallazo para evidencia , por que estas
         a muy pocos pasos de ganar las decimas !! 
